--- a/blogDetail.html
+++ b/blogDetail.html
@@ -330,11 +330,10 @@
                         <p>Your email address will not be published<span>*</span></p>
                         <form>
                             <div class="inputs-area">
-                                <input id="author" name="author" type="text" placeholder="Your Name *" value=""
+                                <input id="author" name="author" type="text" placeholder="Your FullName *" value=""
                                     size="30" aria-required="true">
                                 <input id="email" name="email" type="email" placeholder="Email Address *" value=""
                                     size="30" aria-required="true">
-                                <input id="url" name="url" type="url" placeholder="Your Website" value="" size="30">
                             </div>
                             <textarea id="comment" placeholder="Comment"></textarea>
                             <div class="comment-form">
@@ -422,46 +421,43 @@
                 </div>
             </div>
         </section>
-
-    </main>
-
-
-    <!-- End Main -->
-    <section id="footer-top-blog-detail">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="./assets/images/service-1.png">
-                        <span class="title">Free Shipping </span>
-                        <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
+        <section id="footer-top-blog-detail">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-sm-12 col-md-3 col-12">
+                        <div class="service-item">
+                            <img src="./assets/images/service-1.png">
+                            <span class="title">Free Shipping </span>
+                            <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="./assets/images/service-2.png">
-                        <span class="title">Free Shipping </span>
-                        <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
+                    <div class="col-lg-3 col-sm-12 col-md-3 col-12">
+                        <div class="service-item">
+                            <img src="./assets/images/service-2.png">
+                            <span class="title">Free Shipping </span>
+                            <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="./assets/images/service-3.png">
-                        <span class="title">Custom Sizing</span>
-                        <p>Order your dress with free custom sizing.</p>
+                    <div class="col-lg-3 col-sm-12 col-md-3 col-12">
+                        <div class="service-item">
+                            <img src="./assets/images/service-3.png">
+                            <span class="title">Custom Sizing</span>
+                            <p>Order your dress with free custom sizing.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="./assets/images/service-4.png">
-                        <span class="title">Superb Quality</span>
-                        <p>We make commitments that the quality of our products will and always will be superb.</p>
+                    <div class="col-lg-3 col-sm-12 col-md-3 col-12">
+                        <div class="service-item">
+                            <img src="./assets/images/service-4.png">
+                            <span class="title">Superb Quality</span>
+                            <p>We make commitments that the quality of our products will and always will be superb.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
+    </main>
+    <!-- End Main -->
 
     <!-- Start Footer -->
     <footer>
