--- a/productDetail.html
+++ b/productDetail.html
@@ -182,6 +182,18 @@
 <!-- End Header -->
     <!-- Start Main -->
     <main>
+        <section id="wrapper-productDetail" style="background-image: url('./assets/images/bg-breadcrumb.jpg');">
+            <div class="container page_text">
+                <h1 style="margin-bottom: 25px;">Product Detail</h1>
+                <ul>
+                    <li>
+                        <a href="home.html">
+                    <li>Home</li><i class="fa-solid fa-angle-right"></i></a></li>
+                    <li><span>Product Detail</span></li>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <section id="product-detail">
             <div class="container">
                 <div class="row">
